--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="ISO-8859-1">
+    <!-- <meta charset="ISO-8859-1"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0,user-scalable=no">
     <title>Travel to your Destination</title>
     <link rel="shortcut icon" href="Image/icon.png">
@@ -108,7 +108,7 @@
                         ut labore et dolore magna aliqua. Quis <br> ipsum sus pendisse ultrices gravida. </p>
                 </div>
                 <div class="button" style="padding-top: 40px; text-align: center; ">
-                    <button style="width: 258; height: 52;">My Travel Log</button>
+                    <button style="width: 258px; height: 52px;">My Travel Log</button>
 
                 </div>
             </div>
