--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- <meta charset="ISO-8859-1"> -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport" content="width=device-width">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0 ,maximum-scale=1.0,user-scalable=no"> -->
     <title>Travel to your Destination</title>
     <link rel="shortcut icon" href="Image/icon.png">
     <link rel="stylesheet" href="CSS/index.css">
@@ -353,8 +354,7 @@
                     <div class="cards" style="margin-top: 57px;" id="slider-main">
                         <div class="card">
 
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
                                 <img src="Image/person-icon.png" alt="Icon">
 
                             </div>
@@ -369,8 +369,7 @@
 
 
                         <div class="card">
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
 
                                 <img src="Image/person-icon.png" alt="Icon">
                             </div>
@@ -383,8 +382,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
                                 <img src="Image/person-icon.png" alt="Icon">
                             </div>
                             <div class="text4" style="margin-top: 20px;">
@@ -403,8 +401,8 @@
                         </div>
 
                         <div class="card">
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
+
 
                                 <img src="Image/person-icon.png" alt="Icon">
                             </div>
@@ -417,8 +415,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
 
                                 <img src="Image/person-icon.png" alt="Icon">
                             </div>
@@ -431,8 +428,7 @@
                             </div>
                         </div>
                         <div class="card">
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
 
                                 <img src="Image/person-icon.png" alt="Icon">
                             </div>
@@ -446,8 +442,7 @@
                         </div>
 
                         <div class="card">
-                            <div class="main"
-                                style="width: 150px; height: 150px; background-color: black; border-radius: 50%;  align-items: center;">
+                            <div class="main">
 
                                 <img src="Image/person-icon.png" alt="Icon">
                             </div>
@@ -524,9 +519,11 @@
                 </div>
                 <div class="table1">
                     <table>
-                        <tr>
-                            <th><a href="#" style="font-size: 24px;">Ouick Links</a></th>
-                        </tr>
+                        <thead>
+                            <tr>
+                                <th><a href="#" style="font-size: 24px;">Ouick Links</a></th>
+                            </tr>
+                        </thead>
                         <tr>
                             <td><a href="#">Home</a></td>
                             <td><a href="#">Travel</a></td>
